--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,10 @@ dependencies {
         exclude group: "com.android.support"
     }
     implementation "com.android.support:support-fragment:26.1.0"
+
+    compile "com.squareup.retrofit2:retrofit:2.3.0"
+    compile "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+    compile "com.squareup.retrofit2:converter-gson:2.3.0"
+
+    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
 }
